Bug: 756892 Reviewer: Jay Wootton Comment: In IE, a large description in the what's new page was overflowing onto the entries below.

--- a/branches/granite/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/branches/granite/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -292,22 +292,40 @@
 	-webkit-border-bottom-right-radius: 3px;
 }
 
+.activityStreamTopEntryDesc
+{
+	color: #333333;
+	font-size: 12px;
+	height: 4em;
+	margin-top: 4px;
+	margin-left: 1px;
+	overflow: hidden;
+	position: relative;
+}
+
+.activityStreamCommentDesc
+{
+	color: #333333;
+	font-size: 12px;
+	height: 2em;
+	margin-top: 4px;
+	margin-left: 1px;
+	overflow: hidden;
+	position: relative;
+}
+
 .activityStreamCommentContentPanel
 {
 	font-size: 12px;
-	height: 2.7em;
 	margin-left: 35px;
-	overflow: hidden;
 	white-space: normal;
 }
 
 .activityStreamTopEntryContentPanel
 {
 	font-size: 13px;
-	height: 4.65em;
 	margin-top: 5px;
 	margin-left: 55px;
-	overflow: hidden;
 	white-space: normal;
 }
 
